A few micro-adjustments when responding... Current issue on small mobile screens regarding white space on the right side

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -36,10 +36,6 @@ body {
 }
 
 .blog-post {
-  padding: 0 0 0 0;
-}
-
-.blog-post {
   @media screen and (min-width: map-get($bp, "xl")) {
     padding-right: 60px;
     padding-bottom: 60px;
